crates/tepra-api/tests/snapshots/askama_render__index_two_printers.snap
---
source: crates/tepra-api/tests/askama_render.rs
assertion_line: 40
expression: html
---
<!DOCTYPE html>
<html lang="ja">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
  <title>TEPRA - プリンター一覧</title>
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4/dist/full.min.css">
  <script src="https://cdn.jsdelivr.net/npm/htmx.org@1/dist/htmx.min.js" defer></script>
</head>
<body class="min-h-screen bg-base-200">
<div class="container mx-auto p-4">
  <h1 class="text-2xl font-bold mb-4">プリンター一覧</h1>
  <ul class="menu bg-base-100 rounded-box w-64">

    <li><a href="/ui/printers/PT-P710BT">PT-P710BT</a></li>

    <li><a href="/ui/printers/QL-800">QL-800</a></li>

  </ul>
</div>
</body>
</html>
