crates/tepra-api/tests/snapshots/askama_render__job_card_canceled.snap
---
source: crates/tepra-api/tests/askama_render.rs
assertion_line: 114
expression: html
---
<div id="job-3"

  class="card bg-base-100 shadow p-4 m-2">
  <p class="font-bold">PT-P710BT</p>
  <p>ジョブ #3</p>

  <p class="text-error">キャンセル済み</p>

</div>
