crates/tepra-api/tests/snapshots/askama_render__job_card_completed.snap
---
source: crates/tepra-api/tests/askama_render.rs
assertion_line: 101
expression: html
---
<div id="job-2"

  class="card bg-base-100 shadow p-4 m-2">
  <p class="font-bold">PT-P710BT</p>
  <p>ジョブ #2</p>

  <p class="text-success">完了</p>

</div>
