crates/tepra-api/tests/snapshots/askama_render__printer_detail_offline.snap
---
source: crates/tepra-api/tests/askama_render.rs
assertion_line: 66
expression: html
---
<!DOCTYPE html>
<html lang="ja">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
  <title>TEPRA - QL-800</title>
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4/dist/full.min.css">
  <script src="https://cdn.jsdelivr.net/npm/htmx.org@1/dist/htmx.min.js" defer></script>
</head>
<body class="min-h-screen bg-base-200">
<div class="container mx-auto p-4">
  <h1 class="text-2xl font-bold mb-4">QL-800</h1>
  <div class="badge badge-error">
    オフライン
  </div>
</div>
</body>
</html>
